--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -15,7 +15,30 @@
 </head>
 <body>
 
-  <!-- We will build the navbar here next -->
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-items">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <a class="navbar-brand" href="#">Food, LLC</a>
+    </div>
+
+    <div class="collapse navbar-collapse visible-xs" id="menu-items">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Chicken</a></li>
+        <li><a href="#">Beef</a></li>
+        <li><a href="#">Sushi</a></li>
+      </ul>
+    </div>
+
+  </div>
+</nav>
+<!-- We will build the navbar here next -->
 
 </body>
 
