Add menu header to index.html

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -38,7 +38,10 @@
 
   </div>
 </nav>
-<!-- We will build the navbar here next -->
+<div class="container">
+  <h1 class="text-center">Our Menu</h1>
+</div>
+!-- We will build the navbar here next -->
 
 </body>
 
