Add tall section to the menu page
Added a tall section for the assignment in the container.

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -41,7 +41,16 @@
 <div class="container">
   <h1 class="text-center">Our Menu</h1>
 </div>
-!-- We will build the navbar here next -->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 tall-section">
+      <p>
+        This is a tall section for the assignment. It uses col-xs-12 so it spans full width on all screen sizes.
+      </p>
+    </div>
+  </div>
+</div>
+
 
 </body>
 
